[gd_scene load_steps=20 format=2]

[ext_resource path="res://Fonts/Montserrat-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Scenes/World.tscn" type="PackedScene" id=3]
[ext_resource path="res://Images/wallpaper.png" type="Texture" id=4]
[ext_resource path="res://Audios/bgm_menu.wav" type="AudioStream" id=5]
[ext_resource path="res://Fonts/PixeloidSansBold-RpeJo.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Fonts/PixeloidSans-nR3g1.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Images/single_menu_button.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 4 )

[sub_resource type="DynamicFont" id=13]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0, 0, 0.588235 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 12 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0, 0, 0, 0.588235 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id=15]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )
main_game_scene = ExtResource( 3 )

[node name="Wallpaper" type="Sprite" parent="."]
position = Vector2( 320, 180 )
texture = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 640.0
margin_bottom = 360.0
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 50

[node name="Container" type="VBoxContainer" parent="MarginContainer"]
margin_top = 20.0
margin_right = 688.0
margin_bottom = 310.0
custom_constants/separation = 11

[node name="Label" type="Label" parent="MarginContainer/Container"]
margin_top = 14.0
margin_right = 688.0
margin_bottom = 73.0
size_flags_horizontal = 3
size_flags_vertical = 6
theme = SubResource( 7 )
custom_colors/font_color = Color( 0.564706, 0.00392157, 0.00392157, 1 )
text = "Astral Tower"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Container"]
margin_top = 99.0
margin_right = 688.0
margin_bottom = 189.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 400
custom_constants/margin_top = 60

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Container/MarginContainer"]
margin_top = 60.0
margin_right = 288.0
margin_bottom = 90.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Container/MarginContainer/VBoxContainer"]
margin_right = 288.0
margin_bottom = 30.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Container/MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 288.0
margin_bottom = 30.0
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="MarginContainer/Container/MarginContainer/VBoxContainer/MarginContainer"]
margin_top = 2.0
margin_right = 288.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0.564706, 0.00392157, 0.00392157, 1 )
custom_fonts/font = SubResource( 13 )
text = "    Play"

[node name="PlayButton" type="Button" parent="MarginContainer/Container/MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 288.0
margin_bottom = 30.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 14 )
enabled_focus_mode = 0
align = 0

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/Container"]
margin_top = 200.0
margin_right = 688.0
margin_bottom = 290.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 400
custom_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Container/MarginContainer3"]
margin_right = 288.0
margin_bottom = 30.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Container/MarginContainer3/VBoxContainer"]
margin_right = 288.0
margin_bottom = 30.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Container/MarginContainer3/VBoxContainer/MarginContainer"]
margin_right = 288.0
margin_bottom = 30.0
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="MarginContainer/Container/MarginContainer3/VBoxContainer/MarginContainer"]
margin_top = 2.0
margin_right = 288.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0.564706, 0.00392157, 0.00392157, 1 )
custom_fonts/font = SubResource( 13 )
text = "    About Us"

[node name="AboutUsButton" type="Button" parent="MarginContainer/Container/MarginContainer3/VBoxContainer/MarginContainer"]
margin_right = 288.0
margin_bottom = 30.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 8 )
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 19 )
custom_styles/normal = SubResource( 15 )
enabled_focus_mode = 0
align = 0

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -7.0

[connection signal="button_up" from="MarginContainer/Container/MarginContainer/VBoxContainer/MarginContainer/PlayButton" to="." method="_on_PlayButton_button_up"]
[connection signal="button_up" from="MarginContainer/Container/MarginContainer3/VBoxContainer/MarginContainer/AboutUsButton" to="." method="_on_AboutUsButton_button_up"]
